--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,12 @@
 <head>
   <title>BhojanamPlain</title>
   <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag 'formtastic', 'formtastic_changes' %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<div class="notice"><%=flash[:notice]%></div>
 <%= yield %>
 
 </body>
